--- a/deployment/VL.IO.Midi.nuspec
+++ b/deployment/VL.IO.Midi.nuspec
@@ -20,7 +20,7 @@
     </dependencies>
   </metadata>
   <files>
-	<file src="..\lib\net472\VL.IO.Midi" target="lib\net472" exclude="" />
+	<file src="..\lib\net472\VL.IO.Midi.dll" target="lib\net472" exclude="" />
     <file src="..\*.vl" target="" exclude="" />
     <file src="..\help\**" target="help\" exclude="" />
 	<file src="nugeticon.png" target="icon\" />
