--- a/deployment/VL.IO.Midi.nuspec
+++ b/deployment/VL.IO.Midi.nuspec
@@ -4,7 +4,7 @@
     <id>VL.IO.Midi</id>
     <version>1.0.6</version>
     <title>VL.IO.Midi</title>
-    <authors>vvvv, Leslie Sanford, Randall Vazquez</authors>
+    <authors>vvvv, Leslie Sanford, Randall Vásquez</authors>
     <owners>vvvv</owners>
     <projectUrl>https://github.com/vvvv/VL.IO.Midi</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
