--- a/deployment/VL.IO.Midi.nuspec
+++ b/deployment/VL.IO.Midi.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>VL.IO.Midi</id>
-    <version>1.1.7</version>
+    <version>1.1.8-ras</version>
     <title>VL.IO.Midi</title>
     <authors>vvvv, Leslie Sanford, Randall Vásquez</authors>
     <owners>vvvv</owners>
