--- a/deployment/VL.IO.Midi.nuspec
+++ b/deployment/VL.IO.Midi.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>VL.IO.Midi</id>
-    <version>1.1.8-ras</version>
+    <version>1.1.8-pre</version>
     <title>VL.IO.Midi</title>
     <authors>vvvv, Leslie Sanford, Randall Vásquez</authors>
     <owners>vvvv</owners>
@@ -15,6 +15,7 @@
 	<dependencies>
       <group targetFramework="net6.0">
         <dependency id="Sanford.Multimedia.Midi" version="6.6.2" />
+        <dependency id="managed-midi" version="1.10.1" />
       </group>
     </dependencies>
     <readme>docs\README.md</readme>
